# NutCracker

./: .gitignore  CMakeLists.txt
.github/: FUNDING.yml
src/: NutDecompiler.cpp  NutScript.h  main.cpp
src/bindings/: CMakeLists.txt  python.cpp
src/core/: CMakeLists.txt
